# NetVision

./: README.md
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/netvirta/netvision/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: com_netvirta_netvision_OpencvNativeClass.cpp  com_netvirta_netvision_OpencvNativeClass.h  native-lib.cpp
app/src/main/java/com/netvirta/netvision/: CameraActivity.kt  OpencvNativeClass.java  OpencvNativeClass.kt  WelcomeActivity.kt
app/src/main/res/layout/: activity_camera.xml  activity_welcome.xml
app/src/main/res/menu/: menu_camera.xml
app/src/main/res/values/: colors.xml  ic_launcher_background.xml  strings.xml
app/src/test/java/com/netvirta/netvision/: ExampleUnitTest.kt
